# rust_1brc

./: Cargo.toml  README.md  ]
benches/: all.rs
data/: sol_10_000.txt
src/: lib.rs  main.rs  t001_basic.rs  t001_basic.txt  t002_fixed_point.rs  t003_branchless_parsing.rs  t004_remove_bound_checks.rs  t005_remove_bound_check_unsafe.rs  t006_memmap.rs  t007_memmap_fixed_point.rs  t008_bittwiddeling_parsing_extreme.rs  t009_btree.rs  t010_radix_trie.rs  t011_fxhash.rs  t012_xxhash1.rs  t013_xxhash2.rs
